[gd_scene load_steps=15 format=3 uid="uid://i6rq20w4slip"]

[ext_resource type="Script" uid="uid://bgcnk5tab4u44" path="res://Assets/Script/Audio/character_audio.gd" id="1_8kiif"]
[ext_resource type="AudioStream" uid="uid://oecehp3qe57l" path="res://Assets/Audio/Character/Character_walk.mp3" id="2_blk6r"]
[ext_resource type="AudioStream" uid="uid://djwowt4ja63jq" path="res://Assets/Audio/Character/Cheese_Pickup.mp3" id="3_f5ce0"]
[ext_resource type="AudioStream" uid="uid://cu4613wtyuf1g" path="res://Assets/Audio/Character/Game_Over.wav" id="4_jp4fn"]
[ext_resource type="AudioStream" uid="uid://conqcsrvtjnkx" path="res://Assets/Audio/Character/Health_Regen.wav" id="5_c134j"]
[ext_resource type="AudioStream" uid="uid://dn4sobcpxa6bi" path="res://Assets/Audio/Character/Jump.wav" id="6_q4sut"]
[ext_resource type="AudioStream" uid="uid://cyevwd0oi2yrc" path="res://Assets/Audio/Character/Level_completed.wav" id="7_2gvkb"]
[ext_resource type="AudioStream" uid="uid://cqgp3lkg1x8lj" path="res://Assets/Audio/Character/Magic_Cast.mp3" id="8_gpvh7"]
[ext_resource type="AudioStream" uid="uid://c11p41msq1rdy" path="res://Assets/Audio/Character/Punch_Not_Hit.mp3" id="9_nrwy7"]
[ext_resource type="AudioStream" uid="uid://c4ga7tvalqvrs" path="res://Assets/Audio/Character/Punch_On_Hit.wav" id="10_1qtfh"]
[ext_resource type="AudioStream" uid="uid://r7varrpxilra" path="res://Assets/Audio/Character/Racer_walk.mp3" id="11_bnfup"]
[ext_resource type="AudioStream" uid="uid://dr8l7huejhlm4" path="res://Assets/Audio/Character/Take_Damage.wav" id="12_g2ljg"]
[ext_resource type="AudioStream" uid="uid://d2k5a2coqvhwm" path="res://Assets/Audio/Character/Weapon_Not_Hit.wav" id="13_it0i6"]
[ext_resource type="AudioStream" uid="uid://ckdp4q7vwup0b" path="res://Assets/Audio/Character/Weapon_On_Hit.mp3" id="14_6wqy0"]

[node name="Node" type="Node"]
script = ExtResource("1_8kiif")

[node name="Character_Walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_blk6r")

[node name="Cheese_Pickup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_f5ce0")

[node name="Game_Over" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("4_jp4fn")

[node name="Health_Regen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_c134j")

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_q4sut")

[node name="Level_Completed" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("7_2gvkb")

[node name="Magic_Cast" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_gpvh7")

[node name="Punch_Not_Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_nrwy7")

[node name="Punch_On_Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_1qtfh")

[node name="Racer_Walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_bnfup")

[node name="Take_Damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_g2ljg")

[node name="Weapon_Not_Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_it0i6")

[node name="Weapon_On_Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_6wqy0")
